theme.css
* {
  font-family: 'Raleway', sans-serif;
  padding: 0;
  margin: 0;
  background-color: #1b1b1b;
  color: white;
}
a {
  color: white;
}
.header {
  overflow: hidden;
  font-size: 1.25em;
  color: white;
  text-align: left;
  width: 100%;
  height: 7%;
  position: fixed;
  display: flex;
  padding-top: 1em;
  padding-bottom: 1em;
  background-color: #1b1b1b;
}
.header h1 {
  padding-left: 2%;
  flex-grow: 7;
}
.header h3 {
  flex-grow: 1;
  flex-basis: content;
}
.intro {
  z-index: 2;
  font-size: 6em;
  width: 100%;
  color: white;
  height: 5em;
  text-align: center;
  padding-top: 3em;
  background-image: url(data/images/intro-background.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}
#Who {
  margin-top: 3em;
  width: 100%;
  justify-content: center;
  align-content: center;
  align-items: center;
  text-align: center;
}
#Who h1, #Who h2 {
  margin-top: 2em;
  margin-bottom: 3em;
}
#Who .spells {
  display: flex;
  flex-wrap: wrap;
  align-content: space-between;
  justify-content: center;
  margin-left: 2%;
  margin-right: 2%;
}
#Who .box {
  width: 30%;
  display: inline-block;
  vertical-align: center;
  align-content: center;
  margin-bottom: 3em;

}
#Who .box p {
  margin: auto;
  max-width: 300px;
  min-width: 50px;
  padding-top: 1em;
}
#Who .box img {
  width: 40%;
}
.learning {
  width: 100%;
  height: 100%;
  margin: 20em 0px 12em 0em;
  display: flex;
}
.learning h1 {
  margin: auto;
  margin-left: 2%;
  font-size: 1.8em;
  flex-grow: 2;
}
.learning h2 {
  font-size: 12em;
  margin: auto;
  flex-grow: 1;
}
.learning .learn {
  overflow: hidden;
  justify-content: center;
  align-content: center;
  align-items: center;
  text-align: center;
  margin: auto;
  flex-grow: 4;
}
.learning .box {
  width: 10em;
  height: 10em;
  text-align: center;
  margin: auto;
  display: inline-block;
}
.learning h3 {
  font-weight: bold;
  background-position: center;
  height: 50%;
  width: 50%;
  font-size: 2em;
  color: black;
  border-radius: 100%;
  margin: auto;
  line-height: 2.6;
}
.learning .rs {
  background-color: #df5859;
}
.learning .js {
  background-color: yellow;
}
.learning .go {
  background-color: #79bbc2;
}
#projects {
  text-align: center;
}
#projects>h1 {
  font-size: 3em;
}
#projects .proj {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  margin: 6em 15% 3em 15%;
}
#projects .card {
  width: 18em;
  height: 27em;
  margin: 0px 1em 4em 1em;
  display: inline-block;
  border-style: solid;
  border-color: white;
  border-width: 2px;
}
#projects h3 {
  padding-top: 3%;
  text-decoration: underline;
}
#projects p {
  padding-top: 1%;
  padding-bottom: 3%;
}
#projects a {
  text-decoration: none;
}
#projects img {
  margin-bottom: 0.75em;
  width: 100%;
  object-fit: cover;
}
#projects .fakeImg {
  margin-bottom: 0.5em;
  font-weight: bold;
  font-size: 2.5em;
  background-color: white;
  color: black;
  font-family: "Courier New", Courier, monospace;
  text-align: bottom center;
  padding-top: 40%;
  padding-bottom: 40%;
}
footer {
  margin-top: 13em;
  display: flex;
  width: 100%;
  justify-content: center;
  align-content: space-between;
  flex-wrap: wrap;
}
footer h2 {
  padding-left: 1%;
  line-height: 2em;
  height: 100%;
  flex-grow: 9;
  min-width: 50%
}
footer img {
  flex-grow: 1;
  width: 3.75em;
  margin-right: 1em;
  margin-left: 0.3em;
}
.sign {
  font-weight: thin;
  font-size: 1em;
  text-align: right;
  margin-top: 6em;
  margin-right: 1em;
}
@media only screen and (max-width: 900px) {
  .header {
    font-size: 1.1em;
  }
  .intro {
    font-size: 5em;
  }
  #Who .box {
    flex-basis: 100%;
  }
  #Who .box p {
    width: 90%;
    font-size: 0.8em;
  }
  .learning h2 {
    display: none;
  }
}
@media only screen and (max-width: 350px) {
  .header {
    font-size: 0.9em;
  }
  .intro {
    font-size: 3.7em;
  }
  #projects .card {
    width: 16em;
  }
}

